syntax = "proto3";
option go_package = "gagarin.rollups.pb";
message Rollup {
    repeated bytes accounts = 1;
    repeated Transaction transactions = 2;
}

message Transaction {
    int32 from = 1;
    int32 to = 2;
    int64 value = 3;
}

message BlockHeader {
    bytes hash = 1;
    bytes parentHash = 2;
    bytes qcHash = 3;
    bytes dataHash = 4;
    bytes txHash = 5;
    bytes stateHash = 6;
    int32 height = 7;
    int64 timestamp = 8;
}